--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "handlebars": "^4.5.3",
     "helmet": "^3.21.3",
     "mongoose": "^5.9.3",
-    "react-datepicker": "^2.14.1",
     "redis": "^3.0.2",
     "serve-favicon": "^2.5.0",
-    "underscore": "^1.9.2"
+    "underscore": "^1.9.2",
+    "react": "^16.13.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -50,6 +50,9 @@
     "@babel/preset-env": "^7.8.6",
     "@babel/preset-react": "^7.8.3",
     "eslint": "^6.8.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.1",
     "nodemon": "^2.0.2"
